--- a/config.yaml
+++ b/config.yaml
@@ -1,1 +1,20 @@
+year: 2025
+league_id: 35410
+timezone: America/New_York
+
+newsletter:
+  title: "NPFFL Weekly Roast"
+  roast_level: aggressive
+  trophies: [coupon_clipper, dumpster_fire, galaxy_brain, banana_peel, walk_of_shame]
+
+inputs:
+  # Salary is usually available Monday. We’ll grab by glob so you can drop 2025_02_Salary.xlsx each week.
+  salary_glob: "data/salaries/2025_*_Salary.xlsx"
+  # week: null => auto (use last completed week by standings or weeklyResults)
+  week: null
+
+outputs:
+  dir: "build"
+  post_to_slack: true
+  post_to_mailchimp: false   # flip to true when you add Mailchimp secrets
 
