--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -4,37 +4,33 @@ on:
   workflow_dispatch:
     inputs:
       week:
-        description: "Week number (1-18). Leave blank to auto-select last completed week."
+        description: "Week number (1-18). Leave blank for auto."
         required: false
         default: ""
   schedule:
-    - cron: "0 16 * * 2"  # Tuesday 12:00 PM ET (EDT). Change to 17:00 after DST.
+    - cron: "0 16 * * 2"  # Tuesday 12:00 PM ET (EDT)
 
-permissions:
-  contents: read
+jobs:
+  build-newsletter:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Install deps
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-    - name: Configure env
-      env:
-        MFL_USERNAME: ${{ secrets.MFL_USERNAME }}
-        MFL_PASSWORD: ${{ secrets.MFL_PASSWORD }}
-        MFL_API_KEY: ${{ secrets.MFL_API_KEY }}
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      run: |
-        echo "MFL_USERNAME=${MFL_USERNAME}" >> $GITHUB_ENV
-        echo "MFL_PASSWORD=${MFL_PASSWORD}" >> $GITHUB_ENV
-        echo "MFL_API_KEY=${MFL_API_KEY}"   >> $GITHUB_ENV
-        echo "SLACK_WEBHOOK_URL=${SLACK_WEBHOOK_URL}" >> $GITHUB_ENV
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run newsletter
-      env:
-        WEEK: ${{ github.event.inputs.week }}
-      run: |
-        python -m src.main --week "${WEEK}" env
+      - name: Configure env
         env:
           MFL_USERNAME: ${{ secrets.MFL_USERNAME }}
           MFL_PASSWORD: ${{ secrets.MFL_PASSWORD }}
