--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -8,7 +8,7 @@ on:
         required: false
         default: ""
   schedule:
-    # Tuesday 12:00 PM ET during EDT (16:00 UTC). Bump to 17:00 after DST ends.
+    # Tuesday 12:00 PM ET during EDT (16:00 UTC). Adjust after DST.
     - cron: "0 16 * * 2"
 
 jobs:
@@ -25,7 +25,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          cache: "pip"  # speeds up repeated installs
+          cache: "pip"
 
       - name: Install deps
         run: |
@@ -54,22 +54,14 @@ jobs:
         run: |
           set -euo pipefail
           mkdir -p build
-
-          # Build args safely; only add --week if non-empty
           ARGS=( --out-dir build )
           if [[ -n "${WEEK:-}" ]]; then
             ARGS+=( --week "$WEEK" )
           fi
-
-          # main.py already defaults make-html True; add flag if you want to force it:
-          # ARGS+=( --make-html )
-
           python -m src.main "${ARGS[@]}"
-
           echo "[out] Contents of build/:"
           ls -lah build || true
 
-      # Derive a week label for artifact naming if none provided
       - name: Discover week label
         run: |
           set -euo pipefail
@@ -81,7 +73,6 @@ jobs:
             if [[ -n "$F" ]]; then
               WLBL=$(basename "$F" | sed -E 's/NPFFL_Week_([0-9]{2}).*/\1/')
             else
-              # fallback: try the generic stub your main writes
               F2=$(ls -1 build/week_*.md 2>/dev/null | sort | tail -n1 || true)
               if [[ -n "$F2" ]]; then
                 WLBL=$(basename "$F2" | sed -E 's/week_([0-9]{2}).*/\1/')
@@ -101,7 +92,5 @@ jobs:
             build/*.md
             build/*.html
             build/context_week_*.json
-          # Use 'warn' while iterating so the job doesn't fail if nothing is produced.
-          # Flip to 'error' later once things are stable.
           if-no-files-found: warn
           retention-days: 30
