--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-pandas
-python-dateutil
-requests
-beautifulsoup4
-lxml
-rapidfuzz
-jinja2
-markdown
-openpyxl
-PyYAML
+pandas==2.2.2
+python-dateutil==2.9.0.post0
+requests==2.31.0
+beautifulsoup4==4.12.3
+lxml==4.9.4
+rapidfuzz==3.6.1
+jinja2==3.1.3
+markdown==3.6
+openpyxl==3.1.2
+PyYAML==6.0.1
+pytest==8.2.2
